<resources>
    <string name="app_name">Work Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Work Calendar</string>
    <string name="second_fragment_label">Settings</string>
    <string name="contract_fragment_label">Contracts</string>
    <string name="time_off_fragment_label">Time Off</string>
    <string name="events_of_day">Events of the day %1$s</string>
    <string name="contract_exists_message">A contract already exists for these dates.</string>
    <string name="field_required_error">Required</string>
    <string name="end_date_after_start_error">Must be the same or later than the start date</string>
    <string name="invalid_date_format_error">Invalid date format</string>
    <string name="saving_please_wait">Saving, please wait…</string>
    <string name="prev_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="add_overtime">Overtime</string>
    <string name="add_time_off">Time off</string>
    <string name="add_payment">Payment</string>
    <string name="add_contract">Contract</string>
    <string name="show_more_actions">Show more actions</string>
    <string name="start_date_hint">Start date</string>
    <string name="end_date_hint">End date</string>
    <string name="shift_label">Shift:</string>
    <string name="start_time_hint">Start time</string>
    <string name="end_time_hint">End time</string>
    <string name="service_area_hint">Área de servicio</string>
    <string name="description_hint">Description</string>
    <string name="save_button">Save</string>
    <string name="time_off_type_label">Time off type</string>
    <string name="hourly_wage_hint">Hourly wage</string>
    <string name="app_settings_title">App Settings</string>
    <string name="afternoon_bonus_hint">Hourly bonus (Afternoon)</string>
    <string name="night_bonus_hint">Hourly bonus (Night)</string>
    <string name="no_contract_exists">There is no contract for the selected date.</string>
    <string name="overtime_exists_message">An overtime record already exists for this date.</string>


    <string-array name="shift_options">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
        <item>Custom</item>
    </string-array>

    <string-array name="time_off_types">
        <item>PTO</item>
        <item>Absence</item>
        <item>Sick Leave</item>
        <item>Leave</item>
    </string-array>

    <string-array name="payment_detail_types">
        <item>Base Salary</item>
        <item>Night Bonus</item>
        <item>Day Bonus</item>
        <item>Holidays</item>
        <item>Overtime</item>
        <item>Vacation</item>
        <item>Nursing Professional Salary Complement</item>
        <item>Seniority</item>
    </string-array>


    <string name="overt_time_fragment_label">OverTime</string>
    <string name="date_hint">Date</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="payment_fragment_label">Payment</string>
    <string name="detail_type">Type</string>
    <string name="detail_amount">Amount</string>
    <string name="add_detail">add payment detail</string>
    <string name="payment_date">Payment Date</string>
    <string name="delete_detail">Delete detail</string>
    <string name="detail_date_single">Date: %1$s</string>
    <string name="detail_date_range">From: %1$s to %2$s</string>
    <string name="detail_amount_format">Amount: %1$.2f</string>
    <string name="error_amount_required">Amount is required</string>
    <string name="error_amount_positive">Amount must be greater than 0</string>
    <string name="error_both_dates_required">Start and end date must both be filled or both empty</string>
    <string name="error_end_date_after_start">End date must be after or equal to start date</string>
    <string name="error_duplicate_type">This type has already been added</string>
    <string name="error_date_required">Payment date is required</string>
    <string name="error_amount_invalid">Invalid amount</string>
    <string name="error_no_details">You must add at least one payment detail</string>
    <string name="conceptos">Details</string>
    <string name="delete">Delete</string>
    <string name="event_icon">Event icon</string>

</resources>
