<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CalendarFragment">

    <fragment
        android:id="@+id/CalendarFragment"
        android:name="com.jsalazar.workcalendar.ui.CalendarFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_calendar">

        <action
            android:id="@+id/action_CalendarFragment_to_SettingFragment"
            app:destination="@id/SettingFragment" />

        <action
            android:id="@+id/action_CalendarFragment_to_ContractFragment"
            app:destination="@id/ContractFragment" />

        <action
            android:id="@+id/action_CalendarFragment_to_TimeOffFragment"
            app:destination="@id/TimeOffFragment" />
        <action
            android:id="@+id/action_CalendarFragment_to_OverTimeFragment"
            app:destination="@id/OverTimeFragment" />
        <action
            android:id="@+id/action_CalendarFragment_to_PaymentFragment"
            app:destination="@id/PaymentFragment" />

    </fragment>
    <fragment
        android:id="@+id/SettingFragment"
        android:name="com.jsalazar.workcalendar.ui.SettingFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_setting">

        <action
            android:id="@+id/action_SettingFragment_to_CalendarFragment"
            app:destination="@id/CalendarFragment" />
    </fragment>

    <fragment
        android:id="@+id/ContractFragment"
        android:name="com.jsalazar.workcalendar.ui.ContractFragment"
        android:label="@string/contract_fragment_label"
        tools:layout="@layout/fragment_contract">

        <action
            android:id="@+id/action_ContractFragment_to_CalendarFragment"
            app:destination="@id/CalendarFragment" />
    </fragment>

    <fragment
        android:id="@+id/TimeOffFragment"
        android:name="com.jsalazar.workcalendar.ui.TimeOffFragment"
        android:label="@string/time_off_fragment_label"
        tools:layout="@layout/fragment_time_off">

        <action
            android:id="@+id/action_TimeOffFragment_to_CalendarFragment"
            app:destination="@id/CalendarFragment" />
    </fragment>

    <fragment
        android:id="@+id/OverTimeFragment"
        android:name="com.jsalazar.workcalendar.ui.OverTimeFragment"
        android:label="@string/overt_time_fragment_label"
        tools:layout="@layout/fragment_over_time">

        <action
            android:id="@+id/action_OverTimeFragment_to_CalendarFragment"
            app:destination="@id/CalendarFragment" />
    </fragment>

    <fragment
        android:id="@+id/PaymentFragment"
        android:name="com.jsalazar.workcalendar.ui.PaymentFragment"
        android:label="@string/payment_fragment_label"
        tools:layout="@layout/fragment_payment">

        <action
            android:id="@+id/action_PaymentFragment_to_CalendarFragment"
            app:destination="@id/CalendarFragment" />
    </fragment>
</navigation>